[package]
name = "mensar"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.129", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"]}
textwrap = "0.14.2"
colored = "2.0.0"
clap = { version = "3.1.18", features = ["derive"] }
derive_more = "0.99"

[build-dependencies]
clap = { version = "3.1.18", features = ["derive"] }
clap_complete = "3.1.4"
