[package]
name = "mensar"
version = "0.3.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"]}
textwrap = "0.16.0"
colored = "2.0.4"
clap = { version = "4.4.6", features = ["derive"] }
derive_more = "0.99"
toml = "0.8.4"

[build-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
